[project]
name = "tinkerforge-async"
authors = [
  { name="Patrick Baus", email="patrick.baus@physik.tu-darmstadt.de" },
]
description = "Python3 AsyncIO Tinkerforge driver"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE",
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
]
keywords = ["IoT", "Tinkerforge", "API"]
dependencies = [
    "typing-extensions; python_version <'3.11'",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/PatrickBaus/tinkerforge_async"
"Bug Tracker" = "https://github.com/PatrickBaus/tinkerforge_async/issues"
"Download" = "https://github.com/PatrickBaus/tinkerforge_async/releases"

[project.optional-dependencies]
dev = [
    "black", "build", "isort", "mypy", "pre-commit", "pylint", "setuptools", "twine",
]

doc = [
    "myst-parser", "sphinx",
]

test = [
    "mypy", "pylint", "pytest", "setuptools"
]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "missing-class-docstring,missing-function-docstring"

[tool.pylint.'MAIN']
load-plugins = "pylint.extensions.docparams"

[tool.pylint.'MISCELLANEOUS']
notes = ["FIXME", "XXX",]

[tool.isort]
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    # conftest.py reorders tests moving slow ones to the end of the list
    "slow",
]

[build-system]
requires = [
    "setuptools>=77.0",
    "typing-extensions; python_version <'3.11'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "tinkerforge_async.__version__"}
